<resources>
    <string name="app_name">Software Shop</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="details_activity_title">Product details</string>

    <string name="category_overview">Overview</string>

    <string name="hint_product_name">Product name</string>

    <string name="category_price">Price</string>

    <string name="hint_product_price">0.00</string>

    <string name="unit_product_price">$</string>

    <string name="category_quantity">Quantity</string>

    <string name="hint_product_quantity">0</string>

    <string name="category_supplier">Supplier</string>

    <string name="hint_supplier_name">Name</string>

    <string name="hint_supplier_phone">Phone</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="action_edit">Edit</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="quantity_incremented">Quantity incremented</string>

    <string name="quantity_decremented">Quantity decremented</string>

    <string name="quantity_zero">Quantity cannot be decremented!</string>

    <string name="button_call_supplier">Call supplier</string>

    <string name="button_delete_product">Delete product</string>

    <string name="button_sale">Sale</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="button_ok">OK</string>

    <string name="error_msg_name">Name field must be filled</string>

    <string name="error_msg_price">Price field must be filled</string>

    <string name="error_msg_quantity">Quantity field must be filled</string>

    <string name="error_msg_supplier_name">Supplier name must be filled</string>
    \
    <string name="error_msg_supplier_phone">Supplier phone must be filled</string>

    <string name="empty_view_title_text">There\'s no products yet...</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="action_insert_some_products">Insert some products</string>

    <string name="action_delete_all_products">Delete all products</string>

    <string name="delete_all_dialog_msg">Delete all the products?</string>
</resources>
