<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorItemName"
            tools:text="@string/hint_product_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorItemPrice"
                android:layout_marginRight="4dp"
                tools:text="@string/hint_product_price"/>

            <TextView
                android:textColor="@color/colorItemPrice"
                android:text="@string/unit_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorItemQuantity"
        android:gravity="center"
        tools:text="@string/hint_product_quantity"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants">

        <Button
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/button_sale" />
    </LinearLayout>
</LinearLayout>